???? Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.22-1

* Update X resources class to allow use of terms other than XTerm
* Apply patch from Harald Weidner to stop error messages in Debian Etch
* Add in key shortcut (alt-h) to toggle history window

2008-11-28 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.21-1

* Implement a basic history window in the console (option -s)
* Fixed bug whereby username@ wasn't being used correctly

2008-11-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.20-1

* Move source repository frmo CVS to SVN on sourceforge
* Remove last digit of version number since not required with SVN
* Add in host menu option to close inactive windows
* Apply bugfixes suppled by Tony Mancill
- reset xrm switch in terminal_args 
- prevent warning messages being printed when keysyms arent found
- fixes for fvwm
- chekc for child process before sending kill
* Slight rewording of man page
* Add in option to use telnet as comms command (use 'ctel' to invoke script)
* Run through perltidy -b -i=2
* Appy patches frmo Klaus Ethgen
- Client dies when cannot write to pipe
- Sleeping and flushing in window manager to allow time to draw windows
- Fix pipe reading to not use undefined values
* Apply patches from Nicolas Simonds
- allow colons in hostnames
- allow -o option as per man page
* Apply patch from Peter Palfrader
- improvement to finding binaries
* Allow font to be specified on the command line
* Check for errors around key data gathering
* Add in 'extra_cluster_file' to csshrc

2006-07-24 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.19.1-1

- Below is an abridged version of changes - see CVS for more information
* Check for failure to connect to X session
* Totally rework character mapping and events to cope with non-QWERTY keyboards
* Rework pasting code to cope with non-QWERTY charatcters
* Manpage/help doc updates and corrections
* Check for missing definitions for cluster tags in .csshrc
* Run through perltidy -b -i=2